2010-03-26  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for bug #613653

	* gmime/gmime.c (g_mime_init): Initialize GMimeObject's type
	registry.
	(g_mime_shutdown): Shut it down here.

	* gmime/gmime-object.c (g_mime_object_type_registry_init): Renamed
	a bit and fixed to not use g_atexit(). Also made internal-public.
	(g_mime_object_type_registry_shutdown): Renamed and made
	internal-public. Also set type_hash to NULL after destroying it so
	that a re-init will work.
	(g_mime_object_register_type): Don't init the type system anymore.
	(g_mime_object_new): Same.
	(g_mime_object_new_type): Same here.

2010-03-26  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for bug #598855

	* gmime/gmime-message.c (process_header): Return TRUE if we match
	MIME-Version.
	(message_prepend_header): Don't drop MIME-Version headers.
	(message_append_header): Same.
	(message_set_header): Here too.
	(message_get_header): Only return the hard-coded "1.0" value for
	MIME-Version if it is not set on the header object.
	(message_remove_header): Allow the MIME-Version header to be
	removed.
	(message_get_headers): Only write our own MIME-Version header if
	one isn't already set in the message headers.
	(message_write_to_stream): Same here.

2010-02-12  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #609700.

	* configure.ac: Define ENABLE_SMIME if we find GpgMe.

	* gmime/gmime-pkcs7-context.c: #ifdef out the GpgMe logic if we
	are building without S/MIME support enabled.

2010-02-07  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.5.1

2010-01-31  Jeffrey Stedfast  <fejj@novell.com>

	* src/uudecode.c (uudecode): Just use fopen() to open fout instead
	of using open() and then fdopen(). Fixes the code to work properly
	on Windows.

	* gmime/gmime-encodings.h (GMIME_UUENCODE_LEN): Fixed to prevent
	possible buffer overflows.

2010-01-30  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Disabled strict-aliasing to work around subtle