@@ -1,3 +1,8 @@
+2010-04-13  Jeffrey Stedfast  <fejj@novell.com>
+
+	* Applied patch by pier11@operamail.com to fix the build for
+	MingW. Fixes bug #615068.
+
 2010-03-26  Jeffrey Stedfast  <fejj@novell.com>
 
 	Fixes for bug #613653
